--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,10 @@
-html{
-  -webkit-app-region: drag;
-}
-
+/* 	Set the entire body as draggable using the '-webkit-app-region: drag' property. 
+	The -webkit-app-region property blocks all other input so any child elements which 
+	require inputs need to set '-webkit-app-region: no-drag' property  */
 body{
   font-size: 15px;
   overflow: auto;
+  -webkit-app-region: drag;
 }
 
 /* Reset
@@ -13,6 +13,10 @@ ul,li{
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+#search{
+	-webkit-app-region: no-drag; 
 }
 
 #search-results{
