--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,15 +78,12 @@ li {
     padding-top: 2px;
 }
 
-.date {
-    margin-top: 10px;
-}
-
 .hours {
     margin-top: 10px;
 }
 
 .comment {
+    width : 100%;
     margin-top: 10px;
 }
 
