Updated gulp build process. It takes more time now :D

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import "font-icons/style.css";
+/* @import "font-icons/style.css"; */
 /* material-ui */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
