--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -106,3 +106,13 @@ body{
 .tracker-dropdown-wrap{
 	display: inline-block;
 }
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
+}
