Adding the most wanted Cat!

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -116,3 +116,13 @@ body{
   z-index: 10;
   background-color: rgba(0,0,0,0.5); /*dim the background*/
 }
+
+.overlay div {
+	width:300px;
+	height:200px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	margin:-100px 0 0 -150px;
+	color : white;
+}
