--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -108,13 +108,23 @@ body{
 }
 
 .overlay{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  background-color: rgba(0,0,0,0.5); /*dim the background*/
+  	position: absolute;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	z-index: 10;
+	-webkit-opacity: 1;
+	opacity: 1;
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.overlay.hide{
+	-webkit-opacity: 0;
+	opacity: 0;
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
 }
 
 .overlay div {
@@ -123,6 +133,6 @@ body{
 	position:absolute;
 	left:50%;
 	top:50%;
-	margin:-100px 0 0 -150px;
+	margin:-100px 0 0 -75px;
 	color : white;
 }
