Feature - Removing added task.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -136,3 +136,11 @@ body{
 	margin:-100px 0 0 -75px;
 	color : white;
 }
+
+.remove {
+	display: none;
+}
+
+.list-group-item:hover .remove {
+	display: block;
+}
