--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -143,3 +143,9 @@ body{
 .list-group-item:hover .remove {
 	display: block;
 }
+
+.expanded-details{
+	font-size: 16px;
+	  margin-top: 9px;
+	  margin-bottom: -15px;
+}
