CSS Cleanup - Part 1

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -81,7 +81,13 @@ body{
 }
 .btn-group{
 	margin-bottom:0;
+	width: 100%;
 }
+
+.btn-group a{
+	width: 50%;
+}
+
 .btn-cancel:not(.btn-link):not(.btn-flat){
 	background:#a2a1a1;
 	color:#fff;
