--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,6 +30,10 @@ body{
 	top:20px;
 	right:20px;
 }
+
+.fbtn.fbtn-green{
+	background:#4caf50 ;
+}
 .btn.btn-fab.top-refresh{
 	font-size:36px;
 	padding:10px;
