--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,13 +11,22 @@ body{
 
 .navbar.navbar, .navbar-default.navbar{
 	background:#f8f7f7;
+	box-shadow: 0 1px 10px rgba(0,0,0,.5);
 }
 .navbar{
 	margin-bottom:0;
 }
 
+.header{
+    top: 1px;
+    left: 1px;
+    right: 1px;
+}
+
 .header-row {
 	display: inline-block;
+	width: 100%;
+	-webkit-app-region: drag;
 }
 
 .icon-menu{
@@ -26,6 +35,16 @@ body{
 
 .header .nav>li>a .header-close:after{
     background: #a2a1a1;
+}
+
+.header .close-btn{
+	border-radius: 50%;
+	background: #C85050;
+	padding: 3px;
+	margin: 4px;
+	width: 24px;
+	text-align: center;
+	-webkit-app-region: no-drag;
 }
 
 .search-box{
@@ -128,7 +147,8 @@ body{
 }
 .btn-group{
 	margin-bottom:0;
-	width: 100%;
+	left: 1px;
+    right: 1px;
 	background: #EFEFEF;
 }
 
