--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,12 +99,16 @@ li {
     margin-top: 10px;
 }
 
+.datePicker {
+    display: inline-block;
+    width: 50%;
+}
 
 .datePicker input{
+    margin: auto;
     width : 80px;
     height: 24px;
     border-bottom-style: dashed !important;
-
 }
 
 .container-inner{
