--- a/src/css/style.css
+++ b/src/css/style.css
@@ -148,4 +148,8 @@ li {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.date-picker-container #datepicker-adv-1{
+    color: #fff !important;
+}
 /* ---------- awads styles end -------------*/
