Lighter top bar + lazy button color

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,7 +121,7 @@ li {
 }
 
 .btn-lazy {
-    background-color: #C85050;
+    background-color: #EA5E5D;
     color: #fff;
 }
 
@@ -130,7 +130,7 @@ li {
     }
 
 .navbar.navbar, .navbar-default.navbar {
-    background: #C85050;
+    background: #EA5E5D;
 }
 
 .list-item-title {
