--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,8 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 body {
+    font-size: 15px;
     color: #666666;
     background: #f8f7f7;
+    overflow: hidden;
 }
 
 .container-inner {
@@ -10,7 +12,6 @@ body {
 }
 
 .navbar.navbar, .navbar-default.navbar {
-    background: #f8f7f7;
     box-shadow: 0 1px 10px rgba(0,0,0,.5);
 }
 
@@ -34,12 +35,8 @@ body {
     color: #666;
 }
 
-.header .nav > li > a .header-close:after {
-    background: #a2a1a1;
-}
-
 .header .close-btn {
-    margin: 10px;
+    margin: 4px;
     color: #fff;
     font-weight: bold;
 }
