--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,8 +31,8 @@ li {
 }
 
 .result {
-    color: #000000;
-    padding: 10px 20px;
+    color: #000;
+    padding: 5px 20px;
     display: block;
     cursor: pointer;
     background-color: white;
@@ -139,21 +139,22 @@ li {
 }
 
 .list-item-description {
+    display: inline-block;
     color: #666;
     font-size: 12px;
     margin-bottom: -5px;
-    width: 60%;
+    width: 75%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .list-item-tracker{
+    display: inline-block;
     color: #222;
     font-size: 12px;
     font-weight: bold;
     margin-bottom: -5px;
-    width: 20%;
 }
 
 .list-item-task-id{
