--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,7 +115,7 @@ li {
 
 /* ---------- awads styles -------------*/
 .logo-img {
-    padding: 2px 0 0 5px;
+    padding: 3px 0 0 5px;
     -webkit-app-region: no-drag; /* Isurus Hacks ;) */
 }
 
@@ -180,6 +180,16 @@ li {
 .tile-collapse.active {
     margin-right: 0;
     margin-left: 0;
+}
+
+.search-row{
+    margin-right: -14px;
+    margin-left: -14px;
+}
+
+.bottom-button-group{
+    left: 3px;
+    right: 3px;
 }
 
 /* ---------- awads styles end -------------*/
