--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,5 +1,18 @@
 @charset "utf-8";
 /* CSS Document */
+::-webkit-scrollbar {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #999;
+    border-left: solid whiteSmoke 5px;
+    border-right: solid whiteSmoke 5px;
+    -webkit-border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #777;
+}
+
 body {
     font-size: 15px;
     color: #666666;
@@ -223,11 +236,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
     -webkit-opacity: 1;
     opacity: 1;
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
+    z-index: 1;
 }
 
     .overlay.hide {
@@ -238,13 +251,32 @@ body {
     }
 
     .overlay div {
-        width: 300px;
-        height: 200px;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        color: white;
+        z-index: 1;
+    }
+
+    .overlay img{
         position: absolute;
         left: 50%;
         top: 50%;
         margin: -100px 0 0 -75px;
-        color: white;
+        z-index: 1;
+    }
+
+    .overlay h4{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -15px 0 0 -75px;
+        z-index: 1;
+    }
+
+    .overlay_black{
+        background-color: #000;
+        opacity: .2;
     }
 
 .remove {
