--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ li {
 
 #search-results {
     background: #e5e5e5;
-    width: 100%;
+    width: 85%;
     z-index: 1000;
     padding-left: 1px;
     padding-right: 1px;
@@ -146,7 +146,8 @@ li {
     display: inline-block;
     color: #666;
     font-size: 12px;
-    margin-bottom: -5px;
+    margin-bottom: -6px;
+    padding-left: 2px;
     width: 75%;
     white-space: nowrap;
     overflow: hidden;
