Styled about page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -202,4 +202,51 @@ li {
     left: -93px;
     top: 20px;
 }
+
+.modal-dialog-about{
+    margin-right: auto;
+    margin-left: auto;
+    padding: 60px 16px;
+    width: 400px;
+    color: #777;
+}
+
+.modal-dialog-about .version{
+    margin-top: -15px;
+}
+
+.modal-dialog-about p{
+    font-size: 11px;
+}
+
+.modal-dialog-about a{
+    color: #2196f3;
+}
+
+.cloudy {
+    animation: cloudy 5s ease-in-out infinite;
+    background: #FFF;
+    border-radius: 50%;
+    height: 80px;
+    margin-top: 10px;
+}
+
+.cloudy:after {
+    animation: cloudy_shadow 5s ease-in-out infinite;
+    background: #999;
+    border-radius: 50%;
+    content: '';
+    height: 15px;
+    width: 120px;
+    opacity: .2;
+    transform: scale(.7);
+}
+
+@keyframes cloudy {
+    50% { transform: translateY(-20px); }
+}
+
+@keyframes cloudy_shadow {
+    50% { transform: translateY(20px) scale(1); opacity:.05; }
+}
 /* ---------- awads styles end -------------*/
