--- a/src/css/style.css
+++ b/src/css/style.css
@@ -263,3 +263,100 @@ li {
     position: relative;
 }
 /* ---------- awads styles end -------------*/
+
+/*---Overriding Toast styles with custom classes---*/
+.lazy-toast {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 21;
+}
+
+.lazy-toast a {
+  color: #b2dbfb;
+  cursor: pointer;
+}
+
+.lazy-toast a:focus, .lazy-toast a:hover {
+  color: #6ab8f7;
+  text-decoration: none;
+}
+
+.lazy-toast .tooltip {
+  position: static !important;
+}
+
+@media only screen and (min-width: 768px) {
+  .lazy-toast {
+    margin-right: 80px;
+    right: auto;
+    bottom: 24px;
+    left: 16px !important;
+  }
+}
+
+.lazy-toast-inner {
+  background-color: #212121;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 12px 16px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: translate3d(0, 200%, 0);
+  -ms-transform: translate3d(0, 200%, 0);
+  transform: translate3d(0, 200%, 0);
+  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+}
+
+.lazy-toast-inner:after, .lazy-toast-inner:before {
+  content: "";
+  display: table;
+  line-height: 0;
+}
+
+.lazy-toast-inner:after {
+  clear: both;
+}
+
+.lazy-toast-show .lazy-toast-inner {
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+@media only screen and (min-width: 768px) {
+  .lazy-toast-inner {
+    border-radius: 2px;
+    float: left;
+  }
+}
+
+.no-csstransforms3d .lazy-toast-inner {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.no-csstransforms3d .lazy-toast-show .lazy-toast-inner {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.lazy-toast-text {
+  overflow: hidden;
+}
+
+[data-dismiss="lazy-toast"] {
+  cursor: pointer;
+  float: right;
+  font-weight: 700;
+  margin-left: 16px;
+  text-transform: uppercase;
+}
+/*---Overriding Toast styles with custom classes---*/
+
